syntax = "proto3";
package proto;

option java_package = "org.vico.im.proto";
option java_outer_classname = "ProtoMessage";


//指令类型
enum CommandType{
  CONNECT_REQUEST           = 0; //登录 req
  CONNECT_RESPONSE          = 1; //登录 res

  LOGOUT_REQUEST          = 2; //登出 req
  LOGOUT_RESPONSE         = 3; //登出 res

  KEEPALIVE_REQUEST       = 4; //心跳 req
  KEEPALIVE_RESPONSE      = 5; //心跳 res

  MESSAGE_TEXT_REQUEST    = 6; //消息 req
  MESSAGE_TEXT_RESPONSE   = 7; //消息 res
  MESSAGE_SYSTEM          = 8; //系统消息
}


//##############################################################
//消息状态
enum MessageStatus{
  RECEIVED        = 0; //已送达
  READ            = 1; //已读
  REJECTED        = 2; //拒收
}
//公共响应
message CommonResponse {
  int32 code                     = 1;  //状态码

}
//消息响应
message MessageResponse {
  MessageStatus status = 1; //接收状态
}

//连接消息请求
message ConnectRequest {
  string userId                   = 1;  //发送者ID
  uint64 time                     = 2;  //时间
}

//##############################################################
//文字消息请求
message TextMessageRequest {
  string from                    = 1;  //发送者ID
  string to                      = 2;  //接收者ID
  uint64 time                     = 3;  //时间
  string content                  = 4;  //消息内容
}



// 聚合消息
message AggregatedMessage {
  CommandType commandType     = 1; // 类型
  string sessionId            = 2; // sessionId
  string token                = 3; // token
  ConnectRequest connectMsg   = 4; // 连接消息
  TextMessageRequest textMsg  = 5; // 文字消息
  CommonResponse commonRes    = 6; // 公共响应
}